Added trajectory server and client files. Dealing wtih a CMakeLists error.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,7 +9,7 @@ find_package(catkin REQUIRED COMPONENTS roscpp std_msgs genmsg)
 catkin_simple()
 
 # example boost usage
-# find_package(Boost REQUIRED COMPONENTS system thread)
+find_package(Boost REQUIRED COMPONENTS system thread)
 
 # C++0x support - not quite the same as final C++11!
 # SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++0x")
@@ -19,6 +19,8 @@ catkin_simple()
 
 # Executables
 cs_add_executable(ps5_kvc2_joint_controller src/ps5_kvc2_joint_controller.cpp)
+cs_add_executable(ps5_kvc2_trajectory_action_server.cpp)
+cs_add_executable(ps5_kvc2_trajectory_action_client.cpp)
 
 cs_install()
 cs_export()
