--- a/package.xml
+++ b/package.xml
@@ -45,6 +45,12 @@
   <build_depend>sensor_msgs</build_depend>
   <build_depend>roscpp</build_depend>
   <build_depend>std_msgs</build_depend>
+ <build_depend>message_generation</build_depend>
+  <run_depend>roscpp</run_depend>
+<run_depend>trajectory_msgs</run_depend>
+<run_depend>actionlib</run_depend>
+<run_depend>simple_action_client</run_depend>
+<run_depend>message_runtime</run_depend>
 
 
   <!-- The export tag contains other, unspecified, tags -->
