--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,6 +6,7 @@ find_package(catkin REQUIRED COMPONENTS roscpp std_msgs)
 find_package(catkin REQUIRED genmsg)
 find_package(catkin REQUIRED COMPONENTS roscpp std_msgs genmsg)
 
+
 catkin_simple()
 
 # example boost usage
@@ -19,8 +20,8 @@ find_package(Boost REQUIRED COMPONENTS system thread)
 
 # Executables
 cs_add_executable(ps5_kvc2_joint_controller src/ps5_kvc2_joint_controller.cpp)
-cs_add_executable(ps5_kvc2_trajectory_action_server.cpp)
-cs_add_executable(ps5_kvc2_trajectory_action_client.cpp)
+cs_add_executable(ps5_kvc2_trajectory_action_server src/ps5_kvc2_trajectory_action_server.cpp)
+cs_add_executable(ps5_kvc2_trajectory_action_client src/ps5_kvc2_trajectory_action_client.cpp)
 
 cs_install()
 cs_export()
