--- a/package.xml
+++ b/package.xml
@@ -39,17 +39,19 @@
   <!--   <run_depend>message_runtime</run_depend> -->
   <!-- Use test_depend for packages you need only for testing: -->
   <!--   <test_depend>gtest</test_depend> -->
-   <buildtool_depend>catkin</buildtool_depend>
+<build_depend>trajectory_msgs</build_depend>
+  <build_depend>actionlib</build_depend>
+  <build_depend>simple_action_client</build_depend>
+  <buildtool_depend>catkin</buildtool_depend>
   <buildtool_depend>catkin_simple</buildtool_depend>
-  <build_depend>gazebo_msgs</build_depend>
-  <build_depend>sensor_msgs</build_depend>
   <build_depend>roscpp</build_depend>
   <build_depend>std_msgs</build_depend>
- <build_depend>message_generation</build_depend>
   <run_depend>roscpp</run_depend>
-<run_depend>trajectory_msgs</run_depend>
-<run_depend>actionlib</run_depend>
-<run_depend>simple_action_client</run_depend>
+  <run_depend>trajectory_msgs</run_depend>
+  <run_depend>std_msgs</run_depend>
+  <run_depend>actionlib</run_depend>
+  <run_depend>simple_action_client</run_depend>
+ <build_depend>message_generation</build_depend>
 <run_depend>message_runtime</run_depend>
 
 
