Set up the position command messages to use a vector of length 2 instead of just a constant.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,6 +5,7 @@ find_package(catkin_simple REQUIRED)
 find_package(catkin REQUIRED COMPONENTS roscpp std_msgs)
 find_package(catkin REQUIRED genmsg)
 find_package(catkin REQUIRED COMPONENTS roscpp std_msgs genmsg)
+find_package(cwru_msgs)
 
 
 catkin_simple()
