--- a/package.xml
+++ b/package.xml
@@ -46,9 +46,11 @@
   <buildtool_depend>catkin_simple</buildtool_depend>
   <build_depend>roscpp</build_depend>
   <build_depend>std_msgs</build_depend>
+     <build_depend>cwru_msgs</build_depend>
   <run_depend>roscpp</run_depend>
   <run_depend>trajectory_msgs</run_depend>
   <run_depend>std_msgs</run_depend>
+    <run_depend>cwru_msgs</run_depend>
   <run_depend>actionlib</run_depend>
   <run_depend>simple_action_client</run_depend>
  <build_depend>message_generation</build_depend>
